[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/main_menu/menu.png" type="Texture" id=1]
[ext_resource path="res://objects/Fonts/MessageBoxFonts.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Main Menu/Settings.gd" type="Script" id=3]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.656
anchor_top = 0.376
anchor_right = 0.656
anchor_bottom = 0.376
margin_right = 375.0
margin_bottom = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckBox" parent="MenuContainer"]
margin_right = 375.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "Во весь экран"

[node name="Label" type="Label" parent="MenuContainer"]
margin_top = 75.0
margin_right = 375.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 2 )
text = "Музыка:"

[node name="Music" type="HSlider" parent="MenuContainer"]
margin_top = 142.0
margin_right = 375.0
margin_bottom = 158.0
min_value = -84.0
max_value = 20.0

[node name="Label2" type="Label" parent="MenuContainer"]
margin_top = 162.0
margin_right = 375.0
margin_bottom = 225.0
custom_fonts/font = ExtResource( 2 )
text = "Звуки:"

[node name="Effects" type="HSlider" parent="MenuContainer"]
margin_top = 229.0
margin_right = 375.0
margin_bottom = 245.0
min_value = -84.0
max_value = 20.0

[node name="Back" type="Button" parent="MenuContainer"]
margin_top = 249.0
margin_right = 375.0
margin_bottom = 318.0
custom_fonts/font = ExtResource( 2 )
text = "Назад"

[connection signal="toggled" from="MenuContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="value_changed" from="MenuContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="MenuContainer/Effects" to="." method="_on_Effects_value_changed"]
[connection signal="pressed" from="MenuContainer/Back" to="." method="_on_Back_pressed"]
